fix display issue on small screens

--- a/WebSite/src/web/src/index.css
+++ b/WebSite/src/web/src/index.css
@@ -2,6 +2,7 @@
     margin-top: 60px;
     margin-left: 15px;
     margin-right: 15px;
+    margin-bottom: 40px;
 }
 
 .sandbox {
